--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,13 +26,7 @@ dockers:
     image_templates:
     - "docker.io/chermed/kodoo:latest"
     - "docker.io/chermed/kodoo:{{ .Tag }}"
-    - "docker.io/chermed/kodoo:v{{ .Major }}{{ .Minor }}"
-  - goos: linux
-    goarch: arm64
-    dockerfile: Dockerfile
-    image_templates:
-    - "docker.io/chermed/kodoo:arm-{{ .Tag }}"
-    - "docker.io/chermed/kodoo:arm-v{{ .Major }}.{{ .Minor }}"
+    - "docker.io/chermed/kodoo:v{{ .Major }}.{{ .Minor }}"
 
 checksum:
   name_template: 'checksums.txt'
