--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,3 +52,27 @@ brews:
     description: Terminal UI for Odoo
     test: |
       system "kodoo version"
+snapcrafts:
+  -
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    replacements:
+      amd64: 64-bit
+      386: 32-bit
+      darwin: macOS
+      linux: Tux
+    publish: true
+    summary: Terminal UI for Odoo
+    description: Terminal UI for Odoo
+    channel_templates:
+      - edge
+      - beta
+      - stable
+    grade: stable
+    confinement: classic
+    license: MIT
+    plugs:
+      personal-files:
+        read:
+        - $HOME/.kodoo
+        write:
+        - $HOME/.kodoo
